--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "cheerio": "^1.0.0",
-    "tone": "^14.8.49",
+    "@supabase/supabase-js": "^2.55.0",
     "@types/leaflet": "^1.9.19",
     "axios": "^1.10.0",
+    "cheerio": "^1.0.0",
     "fastapi": "^0.0.8",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
@@ -23,7 +23,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
-    "react-map-gl": "^7.1.7"
+    "react-map-gl": "^7.1.7",
+    "tone": "^14.8.49"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
